--- a/vercel.json
+++ b/vercel.json
@@ -8,18 +8,8 @@
   ],
   "routes": [
     { "src": "/private_dashboard", "dest": "/api/index.py" },
+    { "src": "/hist/", "dest": "/api/index.py" },
+    { "src": "/bar_chart/", "dest": "/api/index.py" },
     { "src": "/", "dest": "/api/index.py" }
-  ],
-  "functions": {
-    "api/index.py": {
-      "memory": 256,
-      "maxDuration": 10
-    }
-  },
-  "ignore": [
-    "node_modules",
-    ".*",
-    "cereal_data.csv",  
-    "note.txt"
   ]
 }
